--- a/project1/report.ipynb
+++ b/project1/report.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#COMP30024-Artificial-Intelligence-Project-1-Report\" data-toc-modified-id=\"COMP30024-Artificial-Intelligence-Project-1-Report-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>COMP30024 Artificial Intelligence Project 1 Report</a></span><ul class=\"toc-item\"><li><span><a href=\"#import\" data-toc-modified-id=\"import-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>import</a></span></li><li><span><a href=\"#test-files\" data-toc-modified-id=\"test-files-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>test files</a></span></li><li><span><a href=\"#optimize-profile\" data-toc-modified-id=\"optimize-profile-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>optimize profile</a></span></li><li><span><a href=\"#run-test\" data-toc-modified-id=\"run-test-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>run test</a></span></li><li><span><a href=\"#draw-graph\" data-toc-modified-id=\"draw-graph-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>draw graph</a></span><ul class=\"toc-item\"><li><span><a href=\"#a-star\" data-toc-modified-id=\"a-star-1.5.1\"><span class=\"toc-item-num\">1.5.1&nbsp;&nbsp;</span>a star</a></span></li><li><span><a href=\"#whole-program-run-time\" data-toc-modified-id=\"whole-program-run-time-1.5.2\"><span class=\"toc-item-num\">1.5.2&nbsp;&nbsp;</span>whole program run time</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#COMP30024-Artificial-Intelligence-Project-1-Report\" data-toc-modified-id=\"COMP30024-Artificial-Intelligence-Project-1-Report-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>COMP30024 Artificial Intelligence Project 1 Report</a></span><ul class=\"toc-item\"><li><span><a href=\"#import\" data-toc-modified-id=\"import-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>import</a></span></li><li><span><a href=\"#test-files\" data-toc-modified-id=\"test-files-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>test files</a></span></li><li><span><a href=\"#optimize-profile\" data-toc-modified-id=\"optimize-profile-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>optimize profile</a></span></li><li><span><a href=\"#run-test\" data-toc-modified-id=\"run-test-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>run test</a></span></li><li><span><a href=\"#draw-graph\" data-toc-modified-id=\"draw-graph-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>draw graph</a></span><ul class=\"toc-item\"><li><span><a href=\"#a-star\" data-toc-modified-id=\"a-star-1.5.1\"><span class=\"toc-item-num\">1.5.1&nbsp;&nbsp;</span>a star</a></span></li><li><span><a href=\"#whole-program-run-time\" data-toc-modified-id=\"whole-program-run-time-1.5.2\"><span class=\"toc-item-num\">1.5.2&nbsp;&nbsp;</span>whole program run time</a></span></li></ul></li><li><span><a href=\"#new-analysis\" data-toc-modified-id=\"new-analysis-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>new analysis</a></span><ul class=\"toc-item\"><li><span><a href=\"#generate-all-test-case\" data-toc-modified-id=\"generate-all-test-case-1.6.1\"><span class=\"toc-item-num\">1.6.1&nbsp;&nbsp;</span>generate all test case</a></span></li><li><span><a href=\"#store-output\" data-toc-modified-id=\"store-output-1.6.2\"><span class=\"toc-item-num\">1.6.2&nbsp;&nbsp;</span>store output</a></span></li><li><span><a href=\"#draw-graph\" data-toc-modified-id=\"draw-graph-1.6.3\"><span class=\"toc-item-num\">1.6.3&nbsp;&nbsp;</span>draw graph</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -66,7 +66,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## test files"
    ]
@@ -78,7 +80,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-27T09:19:30.006771Z",
      "start_time": "2019-03-27T09:19:30.001783Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -97,7 +100,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-27T09:19:30.823586Z",
      "start_time": "2019-03-27T09:19:30.819598Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -106,7 +110,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## optimize profile"
    ]
@@ -119,6 +125,7 @@
      "end_time": "2019-03-27T09:19:45.504947Z",
      "start_time": "2019-03-27T09:19:32.041897Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -314,7 +321,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## run test"
    ]
@@ -326,7 +335,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-23T06:38:22.454922Z",
      "start_time": "2019-03-23T06:38:22.450895Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -343,7 +353,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-23T06:44:22.820233Z",
      "start_time": "2019-03-23T06:44:15.250693Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -382,7 +393,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-23T06:41:20.187464Z",
      "start_time": "2019-03-23T06:41:19.753644Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -417,27 +429,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## draw graph"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### a star"
    ]
@@ -449,7 +470,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-23T06:42:07.002367Z",
      "start_time": "2019-03-23T06:42:06.997368Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -464,7 +486,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-23T06:42:39.408978Z",
      "start_time": "2019-03-23T06:42:39.404988Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -481,7 +504,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-23T06:42:40.338257Z",
      "start_time": "2019-03-23T06:42:40.222536Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -508,7 +532,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### whole program run time"
    ]
@@ -520,7 +547,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-23T06:45:57.392420Z",
      "start_time": "2019-03-23T06:45:57.386452Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -537,7 +565,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-23T06:46:09.621785Z",
      "start_time": "2019-03-23T06:46:09.494107Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -561,6 +590,206 @@
     "# plt.savefig(\"test.png\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## new analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### generate all test case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### store output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrame: #piece, #block, avg b, d, relative error, runtime, space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-02T03:08:09.533020Z",
+     "start_time": "2019-04-02T03:08:09.530003Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import timeit\n",
+    "from subprocess import call"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-02T03:08:10.531888Z",
+     "start_time": "2019-04-02T03:08:10.525899Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "N_iter = 5\n",
+    "N_digit = 4\n",
+    "PYTHON = \"python\"\n",
+    "PYTHON_FILE = \"test_a_star.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-02T03:09:22.652112Z",
+     "start_time": "2019-04-02T03:09:22.648127Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "filename = \"./input/sample14\"\n",
+    "file = filename + \".json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-02T03:09:39.140606Z",
+     "start_time": "2019-04-02T03:09:23.396671Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3144.9588 (ms)\n",
+      "30\n",
+      "\n",
+      "7.424853064651553\n",
+      "\n",
+      "2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_run_time = []\n",
+    "\n",
+    "\n",
+    "def total_test():\n",
+    "    call([PYTHON, PYTHON_FILE, file])\n",
+    "\n",
+    "time = round(timeit.timeit(total_test, number=N_iter) / N_iter * 1000, N_digit)\n",
+    "print(time, \"(ms)\")\n",
+    "\n",
+    "with open('output.txt', 'r') as the_file:\n",
+    "    for line in the_file:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### draw graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
