--- a/project1/report.ipynb
+++ b/project1/report.ipynb
@@ -738,8 +738,9 @@
     "print(time, \"(ms)\")\n",
     "\n",
     "with open('output.txt', 'r') as the_file:\n",
+    "    # d, avg b, delta, #piece, #block\n",
     "    for line in the_file:\n",
-    "        print(line)"
+    "        print(line, type(line))"
    ]
   },
   {
