--- a/project1/report.ipynb
+++ b/project1/report.ipynb
@@ -705,11 +705,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-02T03:09:39.140606Z",
-     "start_time": "2019-04-02T03:09:23.396671Z"
+     "end_time": "2019-04-02T04:24:23.193495Z",
+     "start_time": "2019-04-02T04:23:47.777554Z"
     }
    },
    "outputs": [
@@ -717,13 +717,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3144.9588 (ms)\n",
+      "7079.1249 (ms)\n",
       "30\n",
-      "\n",
+      " <class 'str'>\n",
       "7.424853064651553\n",
-      "\n",
+      " <class 'str'>\n",
       "2\n",
-      "\n"
+      " <class 'str'>\n",
+      "4\n",
+      " <class 'str'>\n",
+      "10\n",
+      " <class 'str'>\n"
      ]
     }
    ],
