--- a/project1/report.ipynb
+++ b/project1/report.ipynb
@@ -632,10 +632,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number of pieces</th>\n",
+       "      <th>number of blocks</th>\n",
+       "      <th>average branching facotr</th>\n",
+       "      <th>depth of search tree</th>\n",
+       "      <th>relative error</th>\n",
+       "      <th>runtime(in ms)</th>\n",
+       "      <th>space used</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [number of pieces, number of blocks, average branching facotr, depth of search tree, relative error, runtime(in ms), space used]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "df = pd.DataFrame(columns = ['number of pieces', 'number of blocks', 'average branching facotr', 'depth of search tree', \n",
+    "                             'relative error', 'runtime(in ms)', 'space used'])\n",
+    "# df = pd.DataFrame(columns = ['number of pieces', 'number of blocks', 'average branching facotr', 'depth of search tree', \n",
+    "#                              'relative error', 'runtime(in ms)'])\n",
+    "\n",
+    "# df.loc[0] = [1,1,1,1,1,1]\n",
+    "\n",
+    "# clear data\n",
+    "# df = df.iloc[0:0]\n",
+    "\n",
+    "\n",
+    "# for storing temp data for averaging later\n",
+    "temp = pd.DataFrame(columns = ['number of pieces', 'number of blocks', 'average branching facotr', 'depth of search tree', \n",
+    "                             'relative error', 'runtime(in ms)', 'memory used'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "index = 0\n",
+    "for np in range(1, 5):\n",
+    "    path = 'fullTestCase/' + str(np) + 'p'\n",
+    "    os.chdir(path)\n",
+    "    for nb in range(37 - np + 1):\n",
+    "        filename = str(nb) + 'b*.json'\n",
+    "        files = [i for i in glob.glob(filename)]\n",
+    "        temp = temp.iloc[0:0]\n",
+    "        for i in range(len(files)):\n",
+    "            \n",
+    "            fn = files[i]\n",
+    "            \n",
+    "            def total_test():\n",
+    "                call([PYTHON, PYTHON_FILE, fn])\n",
+    "\n",
+    "            time = round(timeit.timeit(total_test, number=N_iter) / N_iter * 1000, N_digit)\n",
+    "            print(time, \"(ms)\")\n",
+    "\n",
+    "            with open('output.txt', 'r') as the_file:\n",
+    "            # d, avg b, delta, #piece, #block\n",
+    "            for line in the_file:\n",
+    "                print(line, type(line))\n",
+    "                \n",
+    "                \n",
+    "            temp.loc[i] = [line[0, line[1], line[2], line[3], line[4], time, line[6]]\n",
+    "        ave = temp.mean()\n",
+    "        # not sure if can equal to series directly                           \n",
+    "        df.loc[index] = temp.mean()\n",
+    "        index += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -814,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   },
   "toc": {
    "nav_menu": {},
