--- a/project1/report.ipynb
+++ b/project1/report.ipynb
@@ -688,7 +688,7 @@
     "import os\n",
     "\n",
     "df = pd.DataFrame(columns = ['number of pieces', 'number of blocks', 'average branching facotr', 'depth of search tree', \n",
-    "                             'relative error', 'runtime(in ms)', 'space used'])\n",
+    "                             'relative error', 'runtime(in ms)', 'space used(in MB)'])\n",
     "# df = pd.DataFrame(columns = ['number of pieces', 'number of blocks', 'average branching facotr', 'depth of search tree', \n",
     "#                              'relative error', 'runtime(in ms)'])\n",
     "\n",
@@ -699,8 +699,6 @@
     "\n",
     "\n",
     "# for storing temp data for averaging later\n",
-    "temp = pd.DataFrame(columns = ['number of pieces', 'number of blocks', 'average branching facotr', 'depth of search tree', \n",
-    "                             'relative error', 'runtime(in ms)', 'memory used'])\n",
     "df"
    ]
   },
@@ -729,16 +727,14 @@
     "            print(time, \"(ms)\")\n",
     "\n",
     "            with open('output.txt', 'r') as the_file:\n",
-    "            # d, avg b, delta, #piece, #block\n",
-    "            for line in the_file:\n",
-    "                print(line, type(line))\n",
+    "                # d, avg b, delta, #piece, #block\n",
+    "                temp = []\n",
+    "                for line in the_file:\n",
+    "                    temp.append(line)\n",
+    "                temp.insert(5, time)\n",
     "                \n",
-    "                \n",
-    "            temp.loc[i] = [line[0, line[1], line[2], line[3], line[4], time, line[6]]\n",
-    "        ave = temp.mean()\n",
-    "        # not sure if can equal to series directly                           \n",
-    "        df.loc[index] = temp.mean()\n",
-    "        index += 1"
+    "            df.loc[index] = temp\n",
+    "            index += 1\n"
    ]
   },
   {
