--- a/project1/report.ipynb
+++ b/project1/report.ipynb
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "      <th>depth of search tree</th>\n",
        "      <th>relative error</th>\n",
        "      <th>runtime(in ms)</th>\n",
-       "      <th>space used</th>\n",
+       "      <th>space used(in MB)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -672,11 +672,11 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [number of pieces, number of blocks, average branching facotr, depth of search tree, relative error, runtime(in ms), space used]\n",
+       "Columns: [number of pieces, number of blocks, average branching facotr, depth of search tree, relative error, runtime(in ms), space used(in MB)]\n",
        "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,6 +686,8 @@
     "import numpy as np\n",
     "import glob\n",
     "import os\n",
+    "import timeit\n",
+    "from subprocess import call\n",
     "\n",
     "df = pd.DataFrame(columns = ['number of pieces', 'number of blocks', 'average branching facotr', 'depth of search tree', \n",
     "                             'relative error', 'runtime(in ms)', 'space used(in MB)'])\n",
@@ -704,18 +706,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "N_iter = 5\n",
+    "N_digit = 4\n",
+    "PYTHON = \"python\"\n",
+    "PYTHON_FILE = \"test_a_star.py\"\n",
+    "\n",
+    "filename = \"./input/sample14\"\n",
+    "file = filename + \".json\"\n",
+    "\n",
+    "\n",
+    "def print_file(file):\n",
+    "    with open(file) as output:\n",
+    "        data = json.load(output)\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\53421\\PycharmProjects\\ai-project\\project1\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'output.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-b10116a47a42>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m             \u001b[0mbad_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m             \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'output.txt'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mthe_file\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m                 \u001b[1;31m# d, avg b, delta, #piece, #block\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m                 \u001b[0mtemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output.txt'"
+     ]
+    }
+   ],
+   "source": [
     "index = 0\n",
-    "for np in range(1, 5):\n",
-    "    path = 'fullTestCase/' + str(np) + 'p'\n",
+    "for np in range(1, 2):\n",
+    "    path = './fullTestCase/' + str(np) + 'p'\n",
+    "    print(os.getcwd())\n",
     "    os.chdir(path)\n",
     "    for nb in range(37 - np + 1):\n",
     "        filename = str(nb) + 'b*.json'\n",
     "        files = [i for i in glob.glob(filename)]\n",
-    "        temp = temp.iloc[0:0]\n",
     "        for i in range(len(files)):\n",
     "            \n",
     "            fn = files[i]\n",
@@ -724,18 +766,47 @@
     "                call([PYTHON, PYTHON_FILE, fn])\n",
     "\n",
     "            time = round(timeit.timeit(total_test, number=N_iter) / N_iter * 1000, N_digit)\n",
-    "            print(time, \"(ms)\")\n",
-    "\n",
+    "            # print(time, \"(ms)\")\n",
+    "            \n",
+    "            bad_file = False\n",
     "            with open('output.txt', 'r') as the_file:\n",
     "                # d, avg b, delta, #piece, #block\n",
     "                temp = []\n",
     "                for line in the_file:\n",
-    "                    temp.append(line)\n",
+    "                    if line == 'None\\n':\n",
+    "                        bad_file = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        temp.append(float(line))\n",
+    "                        \n",
+    "            if bad_file:\n",
+    "                continue\n",
+    "            else:\n",
     "                temp.insert(5, time)\n",
+    "                df.loc[index] = temp\n",
+    "                index += 1\n",
     "                \n",
-    "            df.loc[index] = temp\n",
-    "            index += 1\n"
+    "#             try:\n",
+    "#                 with open('output.txt', 'r') as the_file:\n",
+    "#                     # d, avg b, delta, #piece, #block\n",
+    "#                     temp = []\n",
+    "#                     for line in the_file:\n",
+    "#                         temp.append(line)\n",
+    "#                     temp.insert(5, time)\n",
+    "#             except FileNotFoundError:\n",
+    "#                 print_file(fn)\n",
+    "#                 exit(0)\n",
+    "                \n",
+    "            \n",
+    "df.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
