--- a/project1/report.ipynb
+++ b/project1/report.ipynb
@@ -131,11 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-03T22:04:01.607625Z",
-     "start_time": "2019-04-03T22:04:01.521856Z"
+     "end_time": "2019-04-04T03:52:14.408796Z",
+     "start_time": "2019-04-04T03:52:14.343981Z"
     },
     "scrolled": false
    },
@@ -147,11 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-03T22:04:44.252495Z",
-     "start_time": "2019-04-03T22:04:44.230554Z"
+     "end_time": "2019-04-04T03:52:37.667862Z",
+     "start_time": "2019-04-04T03:52:37.615987Z"
     },
     "scrolled": true
    },
@@ -177,6 +177,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>number of pieces</th>\n",
        "      <th>number of blocks</th>\n",
        "      <th>average branching factor</th>\n",
@@ -190,54 +191,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2418</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.707407</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>46900.9177</td>\n",
+       "      <th>223</th>\n",
+       "      <td>223</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.466667</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>114.2618</td>\n",
        "      <td>8053.0</td>\n",
-       "      <td>69.9143</td>\n",
-       "      <td>./fullTestCase/4p/2b27.json</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2465</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.566561</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>48427.3837</td>\n",
-       "      <td>8053.0</td>\n",
-       "      <td>70.1676</td>\n",
-       "      <td>./fullTestCase/4p/4b14.json</td>\n",
+       "      <td>69.0727</td>\n",
+       "      <td>./fullTestCase/1p/7b13.json</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      number of pieces  number of blocks  average branching factor  \\\n",
-       "2418               4.0               2.0                  5.707407   \n",
-       "2465               4.0               4.0                  6.566561   \n",
+       "     Unnamed: 0  number of pieces  number of blocks  average branching factor  \\\n",
+       "223         223               1.0               7.0                  1.466667   \n",
        "\n",
-       "      depth of search tree  relative error  runtime(in ms)  space used(in MB)  \\\n",
-       "2418                  18.0             4.0      46900.9177             8053.0   \n",
-       "2465                  18.0             3.0      48427.3837             8053.0   \n",
+       "     depth of search tree  relative error  runtime(in ms)  space used(in MB)  \\\n",
+       "223                   6.0             1.0        114.2618             8053.0   \n",
        "\n",
-       "      preprocess time(in ms)                    file name  \n",
-       "2418                 69.9143  ./fullTestCase/4p/2b27.json  \n",
-       "2465                 70.1676  ./fullTestCase/4p/4b14.json  "
+       "     preprocess time(in ms)                    file name  \n",
+       "223                 69.0727  ./fullTestCase/1p/7b13.json  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summary_clean[summary_clean[\"runtime(in ms)\"] >= 30 * 1000]"
+    "summary_clean[summary_clean[\"runtime(in ms)\"] >= 30 * 1000]\n",
+    "\n",
+    "summary.sample(10)"
    ]
   },
   {
