--- a/project1/report.ipynb
+++ b/project1/report.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-03T22:03:58.744872Z",
-     "start_time": "2019-04-03T22:03:58.344913Z"
+     "end_time": "2019-04-04T04:04:51.365374Z",
+     "start_time": "2019-04-04T04:04:51.360376Z"
     }
    },
    "outputs": [],
@@ -131,11 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-04T03:52:14.408796Z",
-     "start_time": "2019-04-04T03:52:14.343981Z"
+     "end_time": "2019-04-04T04:04:55.191076Z",
+     "start_time": "2019-04-04T04:04:55.169169Z"
     },
     "scrolled": false
    },
@@ -147,11 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-04T03:52:37.667862Z",
-     "start_time": "2019-04-04T03:52:37.615987Z"
+     "end_time": "2019-04-04T04:04:55.984033Z",
+     "start_time": "2019-04-04T04:04:55.964088Z"
     },
     "scrolled": true
    },
@@ -191,34 +191,190 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>223</td>\n",
+       "      <th>466</th>\n",
+       "      <td>466</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.466667</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>114.2618</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>121.1016</td>\n",
        "      <td>8053.0</td>\n",
-       "      <td>69.0727</td>\n",
-       "      <td>./fullTestCase/1p/7b13.json</td>\n",
+       "      <td>69.7353</td>\n",
+       "      <td>./fullTestCase/1p/15b17.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>976</th>\n",
+       "      <td>976</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.238806</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>172.7105</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>103.0463</td>\n",
+       "      <td>./fullTestCase/2p/5b18.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2348</th>\n",
+       "      <td>2348</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.357877</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>579.7255</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>72.1173</td>\n",
+       "      <td>./fullTestCase/4p/0b17.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541</th>\n",
+       "      <td>541</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>118.7083</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>71.9532</td>\n",
+       "      <td>./fullTestCase/1p/18b6.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2808</th>\n",
+       "      <td>2808</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>4.326705</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>302.9946</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>68.9297</td>\n",
+       "      <td>./fullTestCase/4p/16b0.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2572</th>\n",
+       "      <td>2572</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.539326</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>162.7892</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>69.5829</td>\n",
+       "      <td>./fullTestCase/4p/8b1.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2671</th>\n",
+       "      <td>2671</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>3.593023</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>310.6447</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>71.4318</td>\n",
+       "      <td>./fullTestCase/4p/11b11.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>767</th>\n",
+       "      <td>767</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>111.2661</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>70.1459</td>\n",
+       "      <td>./fullTestCase/1p/29b2.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>730</th>\n",
+       "      <td>730</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>113.4833</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>68.2350</td>\n",
+       "      <td>./fullTestCase/1p/26b2.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1974</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>3.653846</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>127.0549</td>\n",
+       "      <td>8053.0</td>\n",
+       "      <td>70.0208</td>\n",
+       "      <td>./fullTestCase/3p/13b2.json</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0  number of pieces  number of blocks  average branching factor  \\\n",
-       "223         223               1.0               7.0                  1.466667   \n",
+       "      Unnamed: 0  number of pieces  number of blocks  \\\n",
+       "466          466               1.0              15.0   \n",
+       "976          976               2.0               5.0   \n",
+       "2348        2348               4.0               0.0   \n",
+       "541          541               1.0              18.0   \n",
+       "2808        2808               4.0              16.0   \n",
+       "2572        2572               4.0               8.0   \n",
+       "2671        2671               4.0              11.0   \n",
+       "767          767               1.0              29.0   \n",
+       "730          730               1.0              26.0   \n",
+       "1974        1974               3.0              13.0   \n",
        "\n",
-       "     depth of search tree  relative error  runtime(in ms)  space used(in MB)  \\\n",
-       "223                   6.0             1.0        114.2618             8053.0   \n",
+       "      average branching factor  depth of search tree  relative error  \\\n",
+       "466                   1.000000                   1.0             0.0   \n",
+       "976                   3.238806                   8.0             1.0   \n",
+       "2348                  4.357877                  13.0             2.0   \n",
+       "541                   2.000000                   2.0             0.0   \n",
+       "2808                  4.326705                  15.0             0.0   \n",
+       "2572                  4.539326                  12.0             0.0   \n",
+       "2671                  3.593023                  13.0             2.0   \n",
+       "767                   1.500000                   2.0             0.0   \n",
+       "730                   1.800000                   5.0             1.0   \n",
+       "1974                  3.653846                   9.0             0.0   \n",
        "\n",
-       "     preprocess time(in ms)                    file name  \n",
-       "223                 69.0727  ./fullTestCase/1p/7b13.json  "
+       "      runtime(in ms)  space used(in MB)  preprocess time(in ms)  \\\n",
+       "466         121.1016             8053.0                 69.7353   \n",
+       "976         172.7105             8053.0                103.0463   \n",
+       "2348        579.7255             8053.0                 72.1173   \n",
+       "541         118.7083             8053.0                 71.9532   \n",
+       "2808        302.9946             8053.0                 68.9297   \n",
+       "2572        162.7892             8053.0                 69.5829   \n",
+       "2671        310.6447             8053.0                 71.4318   \n",
+       "767         111.2661             8053.0                 70.1459   \n",
+       "730         113.4833             8053.0                 68.2350   \n",
+       "1974        127.0549             8053.0                 70.0208   \n",
+       "\n",
+       "                         file name  \n",
+       "466   ./fullTestCase/1p/15b17.json  \n",
+       "976    ./fullTestCase/2p/5b18.json  \n",
+       "2348   ./fullTestCase/4p/0b17.json  \n",
+       "541    ./fullTestCase/1p/18b6.json  \n",
+       "2808   ./fullTestCase/4p/16b0.json  \n",
+       "2572    ./fullTestCase/4p/8b1.json  \n",
+       "2671  ./fullTestCase/4p/11b11.json  \n",
+       "767    ./fullTestCase/1p/29b2.json  \n",
+       "730    ./fullTestCase/1p/26b2.json  \n",
+       "1974   ./fullTestCase/3p/13b2.json  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
